src/css/custom.css
/* ... */
.modal-footer {
    min-height: 71px;
}

/****************/
/* Project Page */
/****************/
.circle {
    width: 1rem;
    height: 1rem;
    border-radius: 0.5rem;
    margin: 0rem auto;
}
#project-design.bg-lightgray:hover, #account-page.bg-lightgray:hover {
    background-color: #eceeef;
}
#project-design h3 {
    margin-top: 1rem;
}
#project-design p {
    margin-bottom: 0rem;
    font-size: 80%;
    margin-top: 0.5rem;
}
#project-design-form .header {
    margin-left: -8px;
    margin-right: -8px;
}

/*******************/
/* Collection Page */
/*******************/
ul.samplevalue {
    padding-left: 0;
    column-count: 2;
}
.samplevalue li {
    list-style: none;
    margin-bottom: 1rem;
    -webkit-column-break-inside: avoid;
    page-break-inside: avoid;
    break-inside: avoid;
}
#imagery-info {
    position: absolute;
    top: 0px;
    left: 20%;
    height: auto;
    width: 60%;
    padding: 0.25rem;
    text-align: center;
    color: white;
    background-color: rgba(75,75,150,1.0);
    z-index: 100;
}

/********************/
/* Institution Page */
/********************/
#institution .header {margin: 1rem 0;}
#institution .badge-light {
    color: #31bab0;
    background-color: #f8f9fa;
}

/* FIXME, move any remaining css to geo-dash.css as necessary */
/*******************************/
/* Geo Dash Widget Editor Page */
/*******************************/
.container-fluid.widgetEditor {
    width: 100%;
}
.active-widget {
    opacity: .5;
    outline: 4px dotted #ecbc0d;
    outline-offset: 5px;
}

/****************************/
/* Project Creation Spinner */
/****************************/
#spinner {
    position: absolute;
    left: calc(50% - 2rem);
    width: 4rem;
    height: 4rem;
    border-radius: 2rem;
    border-bottom: 0.5rem solid #3fabc6;
    animation: sweep 1s infinite linear;
    -o-animation: sweep 1s infinite linear;
    -moz-animation: sweep 1s infinite linear;
    -webkit-animation: sweep 1s infinite linear;
}

@keyframes         sweep { to { transform: rotate(360deg); } }
@-o-keyframes      sweep { to { -o-transform: rotate(360deg); } }
@-moz-keyframes    sweep { to { -moz-transform: rotate(360deg); } }
@-webkit-keyframes sweep { to { -webkit-transform: rotate(360deg); } }

/********************/
/* Expandable Image */
/********************/
@media (max-width: 768px) {
    .ExpandableImage__previewImg {
        width: 100%;
    }
}

/*************************/
/* Planet Layer Switcher */
/*************************/
.planet-layer-switcher {
    position: absolute;
    top: 0.5em;
    right: 0.5em;
    text-align: left;
}
.planet-layer-switcher-panel {
    padding: 0 1em 0 0;
    margin: 0;
    border: 4px solid #eee;
    border-radius: 4px;
    background-color: white;
    max-height: 20em;
    overflow-y: scroll;
}
.planet-layer-switcher-ul {
    padding-left: 2em;
    list-style: none;
}
.planet-layer-switcher-layer {
    display: table;
    margin-left: -18px;
}

/*****************/
/* Mailing List  */
/*****************/
.ck-editor__editable {
    min-height: 200px;
}

.surveyrule_tooltip {
    position: relative;
    display: inline-block;
    border-bottom: 1px dotted black;
}

.surveyrule_tooltip .surveyrule_tooltiptext {
    visibility: hidden;
    width: 120px;
    background-color: black;
    color: #fff;
    text-align: center;
    border-radius: 6px;
    padding: 5px 0;

    /* Position the tooltip */
    position: absolute;
    z-index: 1;
}

.surveyrule_tooltip:hover .surveyrule_tooltiptext {
    visibility: visible;
}

.surveyrule_select{
    overflow: scroll;
}

